--- a/diligenciasinternacionalesinc/src/Styles/Dashboard.css
+++ b/diligenciasinternacionalesinc/src/Styles/Dashboard.css
@@ -1,8 +1,7 @@
 .dashboard-container {
   width: 100%;
   /* Elimina esta línea: overflow-x: hidden; */
-  
-  color: var(--color-text);
+ 
 }
 
 /* Animations */
@@ -76,7 +75,12 @@ section {
   font-size: 2.5rem;
   color: var(--color-primary);
   margin-bottom: 1rem;
-  color: var(--color-warning);
+  background-color: white;
+  padding: 10px;
+  
+  width: 100%;
+  border-radius: 10px;
+  
 }
 
 .section-header p {
@@ -85,6 +89,7 @@ section {
   max-width: 700px;
   margin: 0 auto;
   color: var(--color-warning);
+  
 }
 
 /* Split Container */
