--- a/diligenciasinternacionalesinc/src/Styles/Empleados.css
+++ b/diligenciasinternacionalesinc/src/Styles/Empleados.css
@@ -525,6 +525,28 @@
     border: 1px solid #f5c6cb;
     animation: fadeIn 0.5s ease-out;
   }
+  .mensaje-feedback {
+    padding: 10px;
+    border-radius: 8px;
+    margin: 10px auto;
+    width: 90%;
+    max-width: 400px;
+    text-align: center;
+    font-weight: bold;
+  }
+  
+  .mensaje-feedback.exito {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+  }
+  
+  .mensaje-feedback.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+  }
+  
   
   /* Animaciones */
   @keyframes fadeIn {
